; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_nsp_out.c_dn_nsp_send_oth_ack.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_nsp_out.c_dn_nsp_send_oth_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.sk_buff = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dn_nsp_send_oth_ack(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  store %struct.sk_buff* null, %struct.sk_buff** %3, align 8
  %4 = load %struct.sock*, %struct.sock** %2, align 8
  %5 = load i32, i32* @GFP_ATOMIC, align 4
  %6 = call %struct.sk_buff* @dn_alloc_skb(%struct.sock* %4, i32 9, i32 %5)
  store %struct.sk_buff* %6, %struct.sk_buff** %3, align 8
  %7 = icmp eq %struct.sk_buff* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %17

9:                                                ; preds = %1
  %10 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %11 = call i32 @skb_reserve(%struct.sk_buff* %10, i32 9)
  %12 = load %struct.sock*, %struct.sock** %2, align 8
  %13 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %14 = call i32 @dn_mk_ack_header(%struct.sock* %12, %struct.sk_buff* %13, i32 20, i32 9, i32 1)
  %15 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %16 = call i32 @dn_nsp_send(%struct.sk_buff* %15)
  br label %17

17:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.sk_buff* @dn_alloc_skb(%struct.sock*, i32, i32) #1

declare dso_local i32 @skb_reserve(%struct.sk_buff*, i32) #1

declare dso_local i32 @dn_mk_ack_header(%struct.sock*, %struct.sk_buff*, i32, i32, i32) #1

declare dso_local i32 @dn_nsp_send(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
